<resources>
    <string name="app_name">飞凡定位</string>

    <!-- 通用 -->
    <string name="common_config_text">设置</string>
    <string name="common_debug_text">调试</string>

    <!-- 主界面 -->
    <string name="main_bottombar_tab_item_title_sampling">采样</string>
    <string name="main_bottombar_tab_item_title_locating">定位</string>
    <string name="main_bottombar_tab_item_title_config">设置</string>

    <!-- 采集区域 -->
    <string name="sampling_mac_text">采集Mac地址</string>
    <string name="sampling_uuid_text">采集UUID</string>

    <!-- 采集区域-采集Mac地址 -->
    <string name="mac_detail_title_format">%1$s-mac地址</string>
    <string name="mac_detail_total_label">总数:</string>
    <string name="mac_detail_update_label">本次更新:</string>

    <!-- 采集通用 -->
    <string name="sample_detail_sample_text">采样</string>
    <string name="sample_detail_peroid_text">采样周期(单位:毫秒)</string>
    <string name="sample_detail_remove_flag_text">同时删除文件</string>

    <!-- 采集点 -->
    <string name="spot_plan_title_text">采集点平面图</string>
    <string name="spot_detail_title_text">采集点详情</string>
    <string name="spot_detail_remove_text">移除该采集点</string>


    <!-- 采集路线 -->
    <string name="line_plan_menu_title_confirm">确认</string>
    <string name="line_plan_menu_title_cancel">取消</string>
    <string name="line_picker_title_text">选择样本路线</string>
    <string name="line_detail_remove_text">移除该采集路线</string>

    <!-- 实时定位界面 -->
    <string name="realtime_plan_title_text">实时定位平面图</string>
    <string name="realtime_plan_menu_setting_text">设置</string>

    <!-- 定位 -->
    <string name="locating_online_title_text">在线定位</string>
    <string name="locating_offline_title_text">离线定位</string>
    <!--<string name="locating_title_format">%1$s:%2$s at %3$d floor</string>-->

    <!-- 定位控制面板 -->
    <string name="locating_panel_online_text">在线定位</string>
    <string name="locating_panel_scan_period_text">数据累计时间:</string>
    <string name="locating_panel_request_period_text">数据请求时间:</string>

    <!-- 设置 -->
    <string name="setting_sensor_title">传感器</string>
    <string name="setting_sensor_detection_title">检测</string>
    <string name="setting_sensor_detection_subtitle">查看详情</string>
    <string name="setting_sensor_detail_title">传感器详情</string>
    <string name="setting_sensor_sampling_title">采样</string>
    <string name="setting_sensor_sampling_subtitle">采集并上传数据</string>
    <string name="setting_server_title">服务器</string>
    <string name="setting_server_address_title">地址</string>
    <string name="setting_server_port_title">端口</string>
    <string name="setting_general_reset">重置</string>

    <!-- 设置#传感器扫描 -->
    <string name="setting_sensor_scan_title">扫描数据</string>
    <string name="setting_sensor_scan_selection_title">选取传感器</string>
    <string name="setting_sensor_scan_accelerometer_title">加速传感器</string>
    <string name="setting_sensor_scan_linear_accelerometer_title">线性加速传感器</string>
    <string name="setting_sensor_scan_gravimeter_title">重力传感器</string>
    <string name="setting_sensor_scan_magnetometer_title">磁力传感器</string>
    <string name="setting_sensor_scan_tuning">调优参数</string>
    <string name="setting_sensor_scan_frequency">扫描频次(单位:次/秒)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="setting_title_sampling">采样设置</string>

    <string name="setting_test_entry">测试</string>

</resources>
