<?xml version="1.0" encoding="utf-8"?>
<tabs xmlns:bottombar="http://schemas.android.com/apk/res-auto/com.feifan.locate">
    <tab
        bottombar:id="@+id/main_tab_item_sampling"
        bottombar:item_icon="@mipmap/ic_action_sampling"
        bottombar:item_title="@string/main_bottombar_tab_item_title_sampling"
        bottombar:item_fragment="com.feifan.locate.common.BuildingFragment"
        bottombar:item_fragmentArgs="fragment:s{com.feifan.locate.sampling.SamplingFragment}"/>
    <tab
        bottombar:id="@+id/main_tab_item_locating"
        bottombar:item_icon="@mipmap/ic_action_locating"
        bottombar:item_title="@string/main_bottombar_tab_item_title_locating"
        bottombar:item_fragment="com.feifan.locate.common.BuildingFragment"
        bottombar:item_fragmentArgs="fragment:s{com.feifan.locate.locating.RealtimePlanFragment}"/>
    <tab
        bottombar:id="@+id/main_tab_item_config"
        bottombar:item_icon="@mipmap/ic_action_config"
        bottombar:item_title="@string/main_bottombar_tab_item_title_config"
        bottombar:item_fragment="com.feifan.locate.setting.SettingFragment" />
</tabs>