<?xml version="1.0" encoding="utf-8"?>
<com.feifan.locate.locating.config.LocatingPanel xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content">
    <TextView
        style="@style/PanelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/locating_panel_online_text"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/radiogroup_algorithm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rb_centroid"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rb_centroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="centroid"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="knn"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="svm-linear"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MultiCentroid"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3D"/>
        </RadioGroup>
        <TextView
            android:id="@+id/text_scan_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/radiogroup_algorithm"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/locating_panel_scan_period_text"/>
        <include
            android:id="@+id/seek_scan_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/radiogroup_algorithm"
            android:layout_below="@id/text_scan_period"
            layout="@layout/layout_seek_value" />
        <TextView
            android:id="@+id/text_request_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/radiogroup_algorithm"
            android:layout_below="@id/seek_scan_period"
            android:layout_marginTop="5dp"
            android:text="@string/locating_panel_request_period_text"/>
        <include
            android:id="@+id/seek_request_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/radiogroup_algorithm"
            android:layout_below="@id/text_request_period"
            layout="@layout/layout_seek_value" />
    </RelativeLayout>
</com.feifan.locate.locating.config.LocatingPanel>